add  position filter
